Fix owerflow content on mobile

--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -33,7 +33,7 @@
 
 .root_layout {
     min-height: 100dvh;
-    min-width: 100dvw;
+    min-width: fit-content;
 
     display: grid;
 
