--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -43,15 +43,15 @@
     position: fixed;
     left: 0;
     top: 0;
-    width: 100dvh;
-    height: 100dvh;
+    width: 100%;
+    height: 100%;
 
     z-index: 9;
 }
 
 .sidebar {
     --sidebar-open-width: 11em;
-    height: 100dvh;
+    min-height: 100dvh;
     width: var(--header-width);
     padding: 1em;
 
